--- a/notebooks/Sensors/Introduction.ipynb
+++ b/notebooks/Sensors/Introduction.ipynb
@@ -287,13 +287,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "标定过程\n",
+    "### 内参vs外参\n",
     "\n",
-    "kalibr相机-imu外参标定\n",
+    "传感器标定是决定相关算法应用到的传感器重要参数的过程，某些场景下可分为内参和外参。内参指的是只和单个传感器自身有关的参数，如上文提到的IMU随机误差参数、相机畸变参数等；外参一般指的是不同传感器之间固定的位姿变换，如多相机场景下的相机-相机间的位姿变换、激光雷达-IMU、相机-IMU间的位姿变换等。\n",
     "\n",
-    "[小觅相机内参标定](https://mynt-eye-s-sdk.readthedocs.io/zh_CN/latest/src/tools/calibration_tool.html)\n",
+    "网上有很多不同传感器的标定工具，如上文提到的[imu_utils](https://github.com/gaowenliang/imu_utils)，还有[kalibr相机-imu外参标定](https://github.com/ethz-asl/kalibr/wiki/camera-imu-calibration)、[小觅相机内参标定](https://mynt-eye-s-sdk.readthedocs.io/zh_CN/latest/src/tools/calibration_tool.html)等\n",
     "\n",
-    "标定后的参数去哪，VINS"
+    "进行传感器标定后，标定的参数数据按照算法的实际需要填入相应的配置文件，例如：\n",
+    "\n",
+    "[VINS-Fusion config](https://github.com/HKUST-Aerial-Robotics/VINS-Fusion/tree/master/config)：在这个例子中，相机本身的内参填入了配置文件，注意不同的相机模型具有不同的参数，IMU本身的随机误差参数也被填入了，另外相机-IMU的外参也是填入的重要参数。"
    ]
   },
   {
