--- a/notebooks/Sensors/Introduction.ipynb
+++ b/notebooks/Sensors/Introduction.ipynb
@@ -75,9 +75,7 @@
     "关注硬件结构、测量效果、ROS驱动等方面。\n",
     "\n",
     "* [velodyne ROS驱动](https://github.com/ros-drivers/velodyne)\n",
-    "* [rslidar ROS驱动](https://github.com/RoboSense-LiDAR/ros_rslidar)\n",
-    "\n",
-    "激光雷达数据示例"
+    "* [rslidar ROS驱动](https://github.com/RoboSense-LiDAR/ros_rslidar)\n"
    ]
   },
   {
@@ -91,7 +89,9 @@
     "* 绕空间坐标轴x、y、z旋转的角速度\n",
     "* 沿空间坐标轴x、y、z方向的加速度\n",
     "\n",
-    "因此，IMU有时可以看作是“加速度计”和“陀螺仪”的结合体。IMU数据示例\n",
+    "因此，IMU有时可以看作是“加速度计”和“陀螺仪”的结合体。\n",
+    "\n",
+    "![IMU数据示例](img/imu_data.png)\n",
     "\n",
     "加速度计和陀螺仪的误差可以分为：确定性误差（系统误差），随机误差。\n",
     "\n",
