--- a/notebooks/Sensors/Introduction.ipynb
+++ b/notebooks/Sensors/Introduction.ipynb
@@ -306,12 +306,14 @@
     "\n",
     "以米家扫地机器人为例，简要介绍扫地机器人常用传感器：[米家扫地机器人](https://www.mi.com/roomrobot/sensor)\n",
     "\n",
+    "米家扫地机器人拆解：[1699元！小米米家扫地机器人拆解：真复杂](https://news.mydrivers.com/1/501/501871_all.htm)\n",
+    "\n",
     "其中，可能会与扫地机器人slam算法相关的传感器有：\n",
     "\n",
     "* 激光雷达\n",
     "* imu\n",
     "* 相机（米家扫地机器人简介链接未列出）\n",
-    "* 里程计：光电编码器是扫地机器人上的位置和速度检测的传感器，扫地机器人上的光电编码器通过减速器和驱动轮的驱动电机同轴相连，并以增量式编码的方式记录驱动电机旋转角度对应的脉冲。由于光电编码器和驱动轮同步旋转，利用码盘、减速器、电机和驱动轮之间的物理参数，可将检测到的脉冲数转换成驱动轮旋转的角度，即机器人相对于某一参考点的瞬时位置，这就是所谓的里程计。光电编码器已经成为在电机驱动内部、轮轴，或在操纵机构上测量角速度和位置的最普遍的装置。\n",
+    "* 里程计：光电编码器是扫地机器人上的位置和速度检测的传感器，扫地机器人上的光电编码器通过减速器和驱动轮的驱动电机同轴相连，并以增量式编码的方式记录驱动电机旋转角度对应的脉冲。由于光电编码器和驱动轮同步旋转，利用码盘、减速器、电机和驱动轮之间的物理参数，可将检测到的脉冲数转换成驱动轮旋转的角度，即机器人相对于某一参考点的瞬时位置，这就是所谓的里程计。光电编码器已经成为在电机驱动内部、轮轴，或在操纵机构上测量角速度和位置的最普遍的装置。不同语境下，“里程计”含义可能不同，在程序里可能多指里程计信息，例如ROS格式的里程计信息：[nav_msgs/Odometry](http://docs.ros.org/en/melodic/api/nav_msgs/html/msg/Odometry.html)\n",
     "\n",
     "以下为扫地机器人驱动轮动力总成示例，包含电机、减速器等机构：\n",
     "\n",
@@ -320,7 +322,7 @@
     "可能会与扫地机器人路径规划算法（含避障等）相关的传感器有：\n",
     "\n",
     "* 激光雷达\n",
-    "* 沿墙\n",
+    "* 沿墙：红外测距传感器，量程约为2-15cm\n",
     "* 碰撞：在扫地机器人的前端设计了约180°的碰撞板，在碰撞板左右两侧各装有一个光电开关。光电开关由一对红外发射对管组成，发光二极管发射的红外光线通过扫地机器人机身特制的小孔被光敏二极管接受，当机身碰撞板受到碰撞时，碰撞板就会挡住机身特制小孔，阻碍红外线的接受从而向控制系统传达信息 ![碰撞传感器](img/bumper.jpeg)\n",
     "* 超声雷达\n",
     "* 跌落：通过检测轮组是否在被压迫状态，以判断当前机器 是否正常运行\n",
