SLAM introduction conti.

--- a/notebooks/SLAM/Introduction.ipynb
+++ b/notebooks/SLAM/Introduction.ipynb
@@ -37,7 +37,7 @@
     "\n",
     "### 1.4 什么是图优化？\n",
     "\n",
-    "图优化指的是把一个优化问题以一个“图”（graph）的形式表示出来，可以用到图论相关的性质和算法，本质上还是一个优化问题。可以简单理解：待优化的状态量，即机器人在各个时刻的位姿、地图中特征点的空间位置，可以表示为graph的各个顶点，相关的顶点间以边连接，各个边代表的就是误差项，所以图优化问题就是通过优化各个顶点的位置，使所有的边加起来的和最小。\n",
+    "图优化指的是把一个优化问题以一个“图”（graph）的形式表示出来（注：这里的”图“可以看做是指一种特殊的数据结构），可以用到图论相关的性质和算法，本质上还是一个优化问题。可以简单理解：待优化的状态量，即机器人在各个时刻的位姿、地图中特征点的空间位置，可以表示为graph的各个顶点，相关的顶点间以边连接，各个边代表的就是误差项，所以图优化问题就是通过优化各个顶点的”位置“，使所有的边加起来的和最小。\n",
     "\n",
     "解决图优化的开源库如g2o，应用于ORB SLAM等算法中。\n",
     "\n",
@@ -101,6 +101,10 @@
     "通过”滑窗“方法，使用图像、imu信息建立非线性优化问题，解算每帧图像的优化后位姿，以上内容组成了VIO，即所谓”视觉imu里程计“，可以算是前端的内容，但实际上这个前端也是在使用非线性优化在一直优化每帧的位姿的。\n",
     "\n",
     "如果回环检测成功检测到了闭环，那么通过非线性优化进行”重定位“，调整滑窗内的位姿；最终通过全局优化，使用非线性优化方法修正所有帧的位姿。\n",
+    "\n",
+    "以下是论文中对于重定位及全局优化的配图：\n",
+    "\n",
+    "![VINS](img/vins_loop.png)\n",
     "\n",
     "为便于理解，总结一下imu在不同slam算法中的作用：\n",
     "\n",
