Filter slam: 01 doc conti.

--- a/notebooks/SLAM/Filter_SLAM_01.ipynb
+++ b/notebooks/SLAM/Filter_SLAM_01.ipynb
@@ -316,13 +316,13 @@
    "source": [
     "### 贝叶斯滤波\n",
     "\n",
-    "首先来讲，我们为什么要提到高斯分布等以上概率论内容：对于一个最基本的机器人定位问题来讲，如果机器人的运动模型是准确无误的，且机器人自身的里程计、imu等内部传感器是准确的、没有误差的，那么我们就已经能够准确定位机器人了——速度1m/s的机器人在1s后肯定会出现在1m距离以外；另一方面来说，如果机器人的GPS、激光雷达等传感器是准确的、没有误差的，那么我们也能通过机器人在地球坐标系中的位置或机器人在环境中的相对位置来准确定位机器人。\n",
+    "首先，我们为什么要提到高斯分布等以上概率论内容：对于一个最基本的机器人定位问题来讲，如果机器人的运动模型是准确无误的，且机器人自身的里程计、imu等内部传感器是准确的、没有误差的，那么我们就已经能够准确定位机器人了——速度1m/s的机器人在1s后肯定会出现在1m距离以外；另一方面来说，如果机器人的GPS、激光雷达等传感器是准确的、没有误差的，那么我们也能通过机器人在地球坐标系中的位置或机器人在环境中的相对位置来准确定位机器人。\n",
     "\n",
     "可惜的是，对于现实中的机器人来讲，我们很难得到准确的机器人运动模型，从机器人的里程计、imu、GPS、激光雷达等传感器中读到的信号也充满噪声，所以机器人的定位才不是一个简单的问题。\n",
     "\n",
     "我们可以将机器人的状态（包括但不限于位置、角度、速度等）用多维随机变量来表示，一般取每一维变量的期望（也就是平均值）作为该时刻下该状态的估计值，用方差来表示该状态的噪声水平（模型误差、传感器噪声等）。\n",
     "\n",
-    "下面让我们直接快进到**贝叶斯滤波**：\n",
+    "下面让我们跳过基于贝叶斯法则的一系列推导，直接快进到**贝叶斯滤波**：\n",
     "\n",
     "The basic filter algorithm is:\n",
     "\n",
@@ -334,8 +334,9 @@
     "\n",
     "end.\n",
     "\n",
+    "其中$x_{t}$表示了某一时刻t下的机器人状态。\n",
     "\n",
-    "$\\rightarrow$ 第一步被称为 **Prediction（预测）** 过程。 $p(x_t | u_t, x_{t-1})$ The belief, $\\overline{bel}(x_t)$, is **before** incorporating measurement($z_{t}$) at time t=t. This is the step where the motion occurs and information is lost because the means and covariances of the gaussians are added. The RHS of the equation incorporates the law of total probability for prior calculation.\n",
+    "$\\rightarrow$ 第一步被称为 **Prediction（预测）** 过程。 $p(x_t | u_t, x_{t-1})$ 可以理解为机器人的运动模型，表示的是机器人t时刻的状态的概率分布是如何受到t-1时刻的状态和t时刻的控制输入$u_{t}$影响的。比如，t-1时刻机器人在1.4m处，输入的$u_{t}$是1m/s，t和t-1时刻的时间间隔是1s，那么机器人在t时刻的位置就是2.4m处。所得到的$\\overline{bel}(x_t)$, is **before** incorporating measurement($z_{t}$) at time t=t. This is the step where the motion occurs and information is lost because the means and covariances of the gaussians are added. The RHS of the equation incorporates the law of total probability for prior calculation.\n",
     "\n",
     "$\\rightarrow$ 第二步被称为 **Correction（更新update）** 过程。or update step that calculates the belief of the robot **after** taking into account the measurement($z_{t}$) at time t=t. This is where we incorporate the sensor information for the whereabouts of the robot. We gain information here as the gaussians get multiplied here. (Multiplication of gaussian values allows the resultant to lie in between these numbers and the resultant covariance is smaller."
    ]
