--- a/notebooks/SLAM/Filter_SLAM_01.ipynb
+++ b/notebooks/SLAM/Filter_SLAM_01.ipynb
@@ -336,9 +336,9 @@
     "\n",
     "其中$x_{t}$表示了某一时刻t下的机器人状态。\n",
     "\n",
-    "$\\rightarrow$ 第一步被称为 **Prediction（预测）** 过程。 $p(x_t | u_t, x_{t-1})$ 可以理解为机器人的运动模型，表示的是机器人t时刻的状态的概率分布是如何受到t-1时刻的状态和t时刻的控制输入$u_{t}$影响的。比如，t-1时刻机器人在1.4m处，输入的$u_{t}$是1m/s，t和t-1时刻的时间间隔是1s，那么机器人在t时刻的位置就是2.4m处。所得到的$\\overline{bel}(x_t)$, is **before** incorporating measurement($z_{t}$) at time t=t. This is the step where the motion occurs and information is lost because the means and covariances of the gaussians are added. The RHS of the equation incorporates the law of total probability for prior calculation.\n",
+    "$\\rightarrow$ 第一步被称为 **Prediction（预测）** 过程。 $p(x_t | u_t, x_{t-1})$ 可以理解为机器人的运动模型，表示的是机器人t时刻的状态的概率分布是如何受到t-1时刻的状态和t时刻的控制输入$u_{t}$影响的。比如，t-1时刻机器人在1.4m处，输入的$u_{t}$是1m/s，t和t-1时刻的时间间隔是1s，那么机器人在t时刻的位置就是2.4m处。所得到的$\\overline{bel}(x_t)$状态预测值包含了运动模型误差、传感器误差等误差，因此“不确定性”有所增加。\n",
     "\n",
-    "$\\rightarrow$ 第二步被称为 **Correction（更新update）** 过程。or update step that calculates the belief of the robot **after** taking into account the measurement($z_{t}$) at time t=t. This is where we incorporate the sensor information for the whereabouts of the robot. We gain information here as the gaussians get multiplied here. (Multiplication of gaussian values allows the resultant to lie in between these numbers and the resultant covariance is smaller."
+    "$\\rightarrow$ 第二步被称为 **Correction（更新update）** 过程。$p(z_t | x_t)$ 可以理解为机器人的观测模型，表示的是在t时刻下机器人处在$x_{t}$状态时能获得$z_{t}$测量值的概率。第二步更新过程是根据所获得的传感器$z_{t}$测量值对机器人状态进行修正的过程，得到$bel(x_t)机器人在t时刻下的状态更新值，经过修正，“不确定性”减小。"
    ]
   },
   {
@@ -347,16 +347,66 @@
    "source": [
     "### 卡尔曼滤波\n",
     "\n",
-    "卡尔曼滤波器是在估计线性系统状态的过程中，以最小均方误差为目的而推导出的几个递推数学等式,也可以从贝叶斯推断的角度来推导。\n",
+    "如果以上贝叶斯滤波中的运动模型和观测模型都可以用线性系统表示，且各个噪声的分布都可以假设为高斯分布，那么这样的滤波就可以称作是一个卡尔曼滤波。\n",
+    "\n",
+    "卡尔曼滤波器是在估计线性系统状态的过程中，以最小均方误差为目的而推导出的几个递推数学等式,也可以从贝叶斯推断的角度来推导。具体过程可以参考：[卡尔曼滤波 -- 从推导到应用(一)](https://blog.csdn.net/heyijia0327/article/details/17487467)，下面总结卡尔曼滤波的公式：\n",
+    "\n",
+    "### Kalman Filter - 从一维到多维\n",
     "\n",
     "\n",
+    "<u>**Prediction**</u>\n",
     "\n",
-    "## 2 扩展卡尔曼滤波EKF\n",
-    "代码\n",
+    "$\\begin{array}{|l|l|l|}\n",
+    "\\hline\n",
+    "\\text{Univariate} & \\text{Univariate} & \\text{Multivariate}\\\\\n",
+    "\\text{一维高斯分布运算} & \\text{一维卡尔曼} & \\text{多维卡尔曼}\\\\\n",
+    "\\hline\n",
+    "\\bar \\mu = \\mu + \\mu_{f_x} & \\bar x = x + dx & \\bar{\\mathbf x} = \\mathbf{Fx} + \\mathbf{Bu}\\\\\n",
+    "\\bar\\sigma^2 = \\sigma_x^2 + \\sigma_{f_x}^2 & \\bar P = P + Q & \\bar{\\mathbf P} = \\mathbf{FPF}^\\mathsf T + \\mathbf Q \\\\\n",
+    "\\hline\n",
+    "\\end{array}$\n",
     "\n",
-    "## 3 EKF SLAM\n",
-    "代码"
+    "$\\mathbf x,\\, \\mathbf P$ 就是机器人状态向量的均值和其协方差矩阵（参见多维随机变量的均值和方差），对应一维高斯分布的均值 $x$ 和方差 $\\sigma^2$.\n",
+    "\n",
+    "$\\mathbf F$ 就是 *状态转移方程*，在卡尔曼滤波中因为是线性系统，所以是与状态向量匹配的矩阵。如$\\mathbf x$是系统的状态向量，大小为n×1列，则 $\\mathbf F$大小为n×n。\n",
+    "\n",
+    "$\\mathbf Q$ 运动过程的协方差矩阵，包含了运动模型误差、各类负责监测运动过程的传感器（常见的有里程计、imu等）的误差等误差信息。对应一维的 $\\sigma^2_{f_x}$.\n",
+    "\n",
+    "$\\mathbf B$ 和 $\\mathbf u$ 是系统的模型控制输入。假如$\\mathbf u$大小为k×1，$\\mathbf B$是将输入转换为状态的矩阵，大小为n×k。注意这些矩阵的大小，它们将与实际编程密切相关。\n",
+    "\n",
+    "<u>**Correction**</u>\n",
+    "\n",
+    "$\\begin{array}{|l|l|l|}\n",
+    "\\hline\n",
+    "\\text{Univariate} & \\text{Univariate} & \\text{Multivariate}\\\\\n",
+    "\\text{一维高斯分布运算} & \\text{一维卡尔曼} & \\text{多维卡尔曼}\\\\\n",
+    "\\hline\n",
+    "& y = z - \\bar x & \\mathbf y = \\mathbf z - \\mathbf{H\\bar x} \\\\\n",
+    "& K = \\frac{\\bar P}{\\bar P+R}&\n",
+    "\\mathbf K = \\mathbf{\\bar{P}H}^\\mathsf T (\\mathbf{H\\bar{P}H}^\\mathsf T + \\mathbf R)^{-1} \\\\\n",
+    "\\mu=\\frac{\\bar\\sigma^2\\, \\mu_z + \\sigma_z^2 \\, \\bar\\mu} {\\bar\\sigma^2 + \\sigma_z^2} & x = \\bar x + Ky & \\mathbf x = \\bar{\\mathbf x} + \\mathbf{Ky} \\\\\n",
+    "\\sigma^2 = \\frac{\\sigma_1^2\\sigma_2^2}{\\sigma_1^2+\\sigma_2^2} & P = (1-K)\\bar P &\n",
+    "\\mathbf P = (\\mathbf I - \\mathbf{KH})\\mathbf{\\bar{P}} \\\\\n",
+    "\\hline\n",
+    "\\end{array}$\n",
+    "\n",
+    "$\\mathbf H$ 是观测方程，在卡尔曼滤波中，也是与状态向量匹配的矩阵。是测量值，大小为m*1(不是n*1，也不是1*1，后面将说明），H也是状态变量到测量的转换矩阵。大小为m*n。随机变量v是测量噪声。\n",
+    "\n",
+    "$\\mathbf z,\\, \\mathbf R$ 是测量值向量的均值与其协方差矩阵。对应一维高斯分布的 $z$ 和 $\\sigma_z^2$。在多维的卡尔曼滤波中，$\\mathbf z$是测量值，大小为m×1(注意不是n×1，也不是1×1），$\\mathbf H$是状态变量到测量的转换矩阵，大小为m×n。\n",
+    "\n",
+    "$\\mathbf y$ and $\\mathbf K$ 是残差和卡尔曼增益。\n",
+    "\n",
+    "对于具体的卡尔曼滤波计算过程来讲，$\\mathbf Q$ 运动过程的协方差矩阵、$\\mathbf R$ 测量值的协方差矩阵是已知的，各个传感器的误差参数都可以填入这些矩阵。$\\mathbf u$和$\\mathbf z$是每一步的输入量，只要给出$\\mathbf x,\\, \\mathbf P$ 机器人状态向量的均值和其协方差矩阵的初始值，就可以进行迭代计算了。\n",
+    "\n",
+    "卡尔曼滤波器是高斯噪声下线性系统状态的最佳观测器，卡尔曼增益保证了状态向量均方误差最小。\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
