--- a/notebooks/SLAM/Filter_SLAM_02.ipynb
+++ b/notebooks/SLAM/Filter_SLAM_02.ipynb
@@ -5,7 +5,8 @@
    "metadata": {},
    "source": [
     "## 2 扩展卡尔曼滤波EKF\n",
-    "代码\n",
+    "\n",
+    "[概率机器人总结——(扩展)卡尔曼滤波先实践再推导](https://blog.csdn.net/weixin_44580210/article/details/90417331)\n",
     "\n",
     "## 3 EKF SLAM\n",
     "代码"
