Filter slam: 03 doc

--- a/notebooks/SLAM/Filter_SLAM_01.ipynb
+++ b/notebooks/SLAM/Filter_SLAM_01.ipynb
@@ -336,9 +336,9 @@
     "\n",
     "其中$x_{t}$表示了某一时刻t下的机器人状态。\n",
     "\n",
-    "$\\rightarrow$ 第一步被称为 **Prediction（预测）** 过程。 $p(x_t | u_t, x_{t-1})$ 可以理解为机器人的运动模型，表示的是机器人t时刻的状态的概率分布是如何受到t-1时刻的状态和t时刻的控制输入$u_{t}$影响的。比如，t-1时刻机器人在1.4m处，输入的$u_{t}$是1m/s，t和t-1时刻的时间间隔是1s，那么机器人在t时刻的位置就是2.4m处。所得到的$\\overline{bel}(x_t)$状态预测值包含了运动模型误差、传感器误差等误差，因此“不确定性”有所增加。\n",
+    "$\\rightarrow$ 第一步被称为 **Prediction（预测）** 过程。 $p(x_t | u_t, x_{t-1})$ 可以理解为机器人的运动模型，表示的是机器人t时刻的状态的概率分布是如何受到t-1时刻的状态和t时刻的控制输入$u_{t}$影响的。比如，t-1时刻机器人在1.4m处，输入的$u_{t}$是1m/s，t和t-1时刻的时间间隔是1s，那么机器人在t时刻的位置就是2.4m处（不考虑误差的情况下）。所得到的$\\overline{bel}(x_t)$状态预测值包含了运动模型误差、传感器误差等误差，因此“不确定性”有所增加。\n",
     "\n",
-    "$\\rightarrow$ 第二步被称为 **Correction（更新update）** 过程。$p(z_t | x_t)$ 可以理解为机器人的观测模型，表示的是在t时刻下机器人处在$x_{t}$状态时能获得$z_{t}$测量值的概率。第二步更新过程是根据所获得的传感器$z_{t}$测量值对机器人状态进行修正的过程，得到$bel(x_t)机器人在t时刻下的状态更新值，经过修正，“不确定性”减小。"
+    "$\\rightarrow$ 第二步被称为 **Correction（更新update）** 过程。$p(z_t | x_t)$ 可以理解为机器人的观测模型，表示的是在t时刻下机器人处在$x_{t}$状态时能获得$z_{t}$测量值的概率。第二步更新过程是根据所获得的传感器$z_{t}$测量值对机器人状态进行修正的过程，得到$bel(x_t)$机器人在t时刻下的状态更新值，经过修正，“不确定性”减小。"
    ]
   },
   {
@@ -349,12 +349,12 @@
     "\n",
     "如果以上贝叶斯滤波中的运动模型和观测模型都可以用线性系统表示，且各个噪声的分布都可以假设为高斯分布，那么这样的滤波就可以称作是一个卡尔曼滤波。\n",
     "\n",
-    "卡尔曼滤波器是在估计线性系统状态的过程中，以最小均方误差为目的而推导出的几个递推数学等式,也可以从贝叶斯推断的角度来推导。具体过程可以参考：[卡尔曼滤波 -- 从推导到应用(一)](https://blog.csdn.net/heyijia0327/article/details/17487467)，下面总结卡尔曼滤波的公式：\n",
+    "卡尔曼滤波器是在估计线性系统状态的过程中，以最小均方误差为目的而推导出的几个递推数学等式，也可以从贝叶斯推断的角度来推导。具体过程可以参考：[卡尔曼滤波 -- 从推导到应用(一)](https://blog.csdn.net/heyijia0327/article/details/17487467)，下面总结卡尔曼滤波的公式：\n",
     "\n",
     "### Kalman Filter - 从一维到多维\n",
     "\n",
     "\n",
-    "<u>**Prediction**</u>\n",
+    "<u>**Prediction预测**</u>\n",
     "\n",
     "$\\begin{array}{|l|l|l|}\n",
     "\\hline\n",
@@ -374,7 +374,7 @@
     "\n",
     "$\\mathbf B$ 和 $\\mathbf u$ 是系统的模型控制输入。假如$\\mathbf u$大小为k×1，$\\mathbf B$是将输入转换为状态的矩阵，大小为n×k。注意这些矩阵的大小，它们将与实际编程密切相关。\n",
     "\n",
-    "<u>**Correction**</u>\n",
+    "<u>**Correction更新**</u>\n",
     "\n",
     "$\\begin{array}{|l|l|l|}\n",
     "\\hline\n",
@@ -390,11 +390,11 @@
     "\\hline\n",
     "\\end{array}$\n",
     "\n",
-    "$\\mathbf H$ 是观测方程，在卡尔曼滤波中，也是与状态向量匹配的矩阵。是测量值，大小为m*1(不是n*1，也不是1*1，后面将说明），H也是状态变量到测量的转换矩阵。大小为m*n。随机变量v是测量噪声。\n",
+    "$\\mathbf H$ 是观测方程，在卡尔曼滤波中，也是与状态向量匹配的矩阵。\n",
     "\n",
     "$\\mathbf z,\\, \\mathbf R$ 是测量值向量的均值与其协方差矩阵。对应一维高斯分布的 $z$ 和 $\\sigma_z^2$。在多维的卡尔曼滤波中，$\\mathbf z$是测量值，大小为m×1(注意不是n×1，也不是1×1），$\\mathbf H$是状态变量到测量的转换矩阵，大小为m×n。\n",
     "\n",
-    "$\\mathbf y$ and $\\mathbf K$ 是残差和卡尔曼增益。\n",
+    "$\\mathbf y$ 和 $\\mathbf K$ 是残差和卡尔曼增益。\n",
     "\n",
     "对于具体的卡尔曼滤波计算过程来讲，$\\mathbf Q$ 运动过程的协方差矩阵、$\\mathbf R$ 测量值的协方差矩阵是已知的，各个传感器的误差参数都可以填入这些矩阵。$\\mathbf u$和$\\mathbf z$是每一步的输入量，只要给出$\\mathbf x,\\, \\mathbf P$ 机器人状态向量的均值和其协方差矩阵的初始值，就可以进行迭代计算了。\n",
     "\n",
